--- a/Web/especialidades/index.html
+++ b/Web/especialidades/index.html
@@ -184,7 +184,7 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/servicios/desparacitacion.png" alt="servicio" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">DESPARACITACIÓN</h5>
+                    <h5 class="card-title">DESPARASITACIÓN</h5>
                     <hr>
                     <p class="card-text text-justify">Contamos con profesionales capacitados y con más de 10 años de experiencia ayudando a cientos de mascotas, ofreciendo campañas de desparacitación gratuitas.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
