--- a/Web/index.html
+++ b/Web/index.html
@@ -36,7 +36,7 @@
                             <div class="short_contact_list">
                                 <ul>
                                     <li><a href="tel:51944946824">+51 944 946 824</a></li>
-                                    <li><a>Atención las 24 horas</a></li>
+                                    <li><a>Atención de 08:00 a 20:00</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
     <!-- Service area start -->
     <div class="service_area">
         <div class="container">
-            <div class="row justify-content-center ">
+            <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-10">
                     <div class="section_title text-center mb-95">
                         <h3>Nuestros Servicios</h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
+                    <div class="single_service" id="servicioVacuna">
                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
                             <div class="service_icon">
                                 <img src="./assets/img/icons/service-icon-1.png" alt="perro animado">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service active">
+                    <div class="single_service" id="servicioNutricion">
                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
                             <div class="service_icon">
                                 <img src="./assets/img/icons/service-icon-2.png" alt="perro animado">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_service">
+                    <div class="single_service" id="servicioEspecialidades">
                         <div class="service_thumb service_icon_bg_1 d-flex align-items-center justify-content-center">
                             <div class="service_icon">
                                 <img src="./assets/img/icons/service-icon-3.png" alt="perro animado">
