--- a/Web/vacunas/index.html
+++ b/Web/vacunas/index.html
@@ -93,7 +93,7 @@
                                                     <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -123,9 +123,10 @@
                         </div>
                         <div class="services-cap">
                             <h5>
-                                <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">Vacuna contra el distemper</a>
+                                <a>Vacuna contra el distemper</a>
                             </h5>
                             <p>Protege el aparato respiratorio y gastroinstestinal de tu cachorro de este virus altamente contagiosos en perros.</p>
+                            <a href="https://wa.me/51944946824" class="btn btn-outline-success" rel="nofollow" target="_blank">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -136,9 +137,10 @@
                         </div>
                         <div class="services-cap">
                             <h5>
-                                <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">Vacuna contra el parvovirus</a>
+                                <a>Vacuna contra el parvovirus</a>
                             </h5>
                             <p>La enfermedad más común en perros ya tiene cura, no dejes que tu mascota sufra los malestares de este virus.</p>
+                            <a href="https://wa.me/51944946824" class="btn btn-outline-success" rel="nofollow" target="_blank">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -149,9 +151,10 @@
                         </div>
                         <div class="services-cap">
                             <h5>
-                                <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">Vacuna contra la leptospirosis</a>
+                                <a>Vacuna contra la leptospirosis</a>
                             </h5>
                             <p>Cuídate y cuida de tus seres cercanos, cuidando a tu mascota de esta enfermedad contagiosa hasta en humanos.</p>
+                            <a href="https://wa.me/51944946824" class="btn btn-outline-success" rel="nofollow" target="_blank">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -162,9 +165,10 @@
                         </div>
                         <div class="services-cap">
                             <h5>
-                                <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">Vacuna contra la rabia</a>
+                                <a>Vacuna contra la rabia</a>
                             </h5>
                             <p>Protege a todos, protegiendo a tu mascota de este virus mortal que se transmite mediante la saliva de animales infectados.</p>
+                            <button class="btn btn-outline-success">Más Información</button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +197,7 @@
                             <ul class="links">
                                 <li><a href="./." rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a></li>
                             </ul>
                         </div>
                     </div>
