lista de mis mascotas diseñado

--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -108,7 +108,11 @@
         </div>
     </header>
     <!-- Header end -->
-    
+
+    <div class="row pb-4" id="contenedorMisMascotas">
+        <!-- Generated from JS -->
+    </div>
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
