--- a/Web/registrar-mascota/index.html
+++ b/Web/registrar-mascota/index.html
@@ -125,7 +125,7 @@
                                         <div class="row">
                                             <div class="col-md-4 mb-3">
                                                 <div class="text-center">
-                                                    <img alt="Foto de la mascota" src="https://via.placeholder.com/128x128?text=Seleccione+Especie" class="rounded-circle img-responsive mt-2" width="128" height="128" />
+                                                    <img id="imgEspecie" alt="Foto de la mascota" src="https://via.placeholder.com/128x128" class="rounded-circle img-responsive mt-2" width="128" height="128"/>
                                                     <!-- <div class="mt-2">
                                                         <span class="btn btn-primary"><i class="fa fa-arrow-up"></i> Upload</span>
                                                     </div> -->
