--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -113,6 +113,54 @@
         <!-- Generated from JS -->
     </div>
 
+    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header d-flex justify-content-center">
+                    <h5 class="modal-title">Formulario de Edición de Mascota</h5>
+                </div>
+                <div class="modal-body">
+                    <form id="frmEditarMascota">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div class="mb-2 col-12">
+                                        <input type="text" class="form-control" id="txtInputMascotaNombre" placeholder="Ingresar Nombre">
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <input type="number" class="form-control mb-2" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="1" max="500" step="0.01">
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <input type="number" class="form-control mb-2" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="1" max="500" step="0.01">
+                                    </div>
+                                    <div class="mb-2 col-12">
+                                        <input type="text" class="form-control mb-2" id="txtInputMascotaPresentacion" placeholder="Ingresar Presentación">
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <select class="form-select form-control" id="cboSelectMascotaEspecie"></select>
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <select class="form-select form-control" id="cboSelectMascotaRaza"></select>
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <select class="form-select form-control" id="cboSelectMascotaGenero"></select>
+                                    </div>
+                                    <div class="mb-2 col-6">
+                                        <select class="form-select form-control" id="cboSelectMascotaCondicion"></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer col-12 d-flex justify-content-center">
+                    <button type="button" class="btn btn-primary col-5" id="btnEditarMascota">Editar Mascota</button>
+                    <button type="button" class="btn btn-danger col-5" data-bs-dismiss="modal">Cancelar Cambios</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
@@ -210,6 +258,13 @@
         };
         firebase.initializeApp(firebaseConfig);
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     <script src="./jquery-1.12.4.js"></script>
     <script src="./jquery-slick-nav.js"></script>
