--- a/Web/index.html
+++ b/Web/index.html
@@ -24,6 +24,11 @@
     <link rel="stylesheet" href="./assets/css/flaticon.css">
     <link rel="stylesheet" href="./assets/css/slick-nav.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <script>
+        (function (b, c) { var e = document.createElement('link'); e.rel = 'stylesheet', e.type = 'text/css', e.href = 'https://chatboxlive.blahbox.net/static/css/main.css', document.getElementsByTagName('head')[0].appendChild(e); var f = document.createElement('script'); f.onload = function () { var g; if (c) g = 'previewInit'; else { var h = document.createElement('div'); g = 'cbinit', h.id = 'cbinit', document.body.append(h) } console.log(document.querySelector('#' + g)), chatbox.initChat(document.querySelector('#' + g), b, c) }, f.src = 'https://chatboxlive.blahbox.net/static/js/chat-lib.js', document.getElementsByTagName('head')[0].appendChild(f) })('8bea6deb7a98158e66df3deb6c260ebb', 0);
+    </script>
+
 </head>
 <body>
     <!-- Header start -->
