precio agregado a los productos

--- a/Web/nutricion/index.html
+++ b/Web/nutricion/index.html
@@ -113,7 +113,7 @@
         <a class="btn btn-outline-success m-1" id="btnVerPerros">Ver comida para Perros</a>
         <a class="btn btn-outline-success m-1" id="btnVerGatos">Ver comida para Gatos</a>
     </div>
-
+    
     <!-- Comidas para perros y gatos -->
     <div class="row pb-4" id="comidaContenedor">
         <div class="col-lg-3 col-md-4 col-sm-6 perroCard">
@@ -121,6 +121,7 @@
                 <img src="../assets/img/comidas/perros/1.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">GANADOR PREMIUM</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -138,6 +139,7 @@
                 <img src="../assets/img/comidas/gatos/1.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">PRO PLAN</h5>
+                    <p class="precio">S/. 11</p>
                     <hr>
                     <p class="card-text text-justify">Nutrición natural y holística que apoya a las necesidades básicas y especiales de bienestar de todas tus mascotas en etapa de crecimiento, para que crezcan fuertes y sanas.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -155,6 +157,7 @@
                 <img src="../assets/img/comidas/perros/2.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">ULTIMA</h5>
+                    <p class="precio">S/. 12</p>
                     <hr>
                     <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -172,6 +175,7 @@
                 <img src="../assets/img/comidas/gatos/2.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">MATISSE</h5>
+                    <p class="precio">S/. 13</p>
                     <hr>
                     <p class="card-text text-justify">Alimento rico en pollo, completo y equilibrado con la correcta combinación de nutrientes para ayudar a mantener la salud y el bienestar de los perros adultos de raza pequeña.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -189,6 +193,7 @@
                 <img src="../assets/img/comidas/perros/3.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">NUTRAM</h5>
+                    <p class="precio">S/. 14</p>
                     <hr>
                     <p class="card-text text-justify">Nutrición natural para las mascotas que requieren de cuidados adicionales básicos como regular sus sensibilidades, controlar su peso y mejorar el estilo de vida en interiores.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -206,6 +211,7 @@
                 <img src="../assets/img/comidas/gatos/3.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">RICOCAT</h5>
+                    <p class="precio">S/. 15</p>
                     <hr>
                     <p class="card-text text-justify">Nutrición natural y holística que apoya en la alimentación diaria de tus mascotas para complementar su nutrición en base a grasas y calorías que son necesarias en etapa de crecimiento.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -223,6 +229,7 @@
                 <img src="../assets/img/comidas/perros/4.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">MAGNUS</h5>
+                    <p class="precio">S/. 16</p>
                     <hr>
                     <p class="card-text text-justify">Alimento rico en carne y muy completo en proteínas, siendo equilibrado con la correcta combinación de nutrientes que toda mascota necesita tener en su alimentación día a día.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -240,6 +247,7 @@
                 <img src="../assets/img/comidas/gatos/4.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">ULTIMA</h5>
+                    <p class="precio">S/. 17</p>
                     <hr>
                     <p class="card-text text-justify">Este es un alimento 100% natural, sin cereales, hipoalergénico, completo y equilibrado para cachorros y perros jóvenes de todas las razas formulado con ingredientes de alta calidad.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -257,6 +265,7 @@
                 <img src="../assets/img/comidas/perros/5.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">ALCON</h5>
+                    <p class="precio">S/. 18</p>
                     <hr>
                     <p class="card-text text-justify">Nutrición perfecta para cachorros en los primeros años de vida, complementa su alimentación desde temprana edad para que crezca y se desarrolle de manera correcta y saludable.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -274,6 +283,7 @@
                 <img src="../assets/img/comidas/gatos/5.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">CAMBO CAT</h5>
+                    <p class="precio">S/. 19</p>
                     <hr>
                     <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -291,6 +301,7 @@
                 <img src="../assets/img/comidas/perros/6.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">DOG CHOW</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Alimento reformulado con ingredientes de alta calidad, este producto es ideal para cachorros de todas las razas y tamaños desde los 2 meses hasta los 18 meses de edad.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -308,6 +319,7 @@
                 <img src="../assets/img/comidas/gatos/6.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">KISS KAT</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Ideal para cualquier raza de gato, ya que es un alimento completo y equilibrado en nutrientes para ayudar a mantener la salud y el bienestar de los gatos adultos o en etapa de vejez.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -325,6 +337,7 @@
                 <img src="../assets/img/comidas/perros/7.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">PRO PLAN</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Alimento rico en proteínas y nutrientes para ofrecer una vida saludable al engreído del hogar, sin descuidar aspectos como su alimentación, salud y el bienestar en interiores.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -342,6 +355,7 @@
                 <img src="../assets/img/comidas/gatos/7.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">HILL’S</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -359,6 +373,7 @@
                 <img src="../assets/img/comidas/perros/8.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">BALANKAI</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Alimentación para toda mascota del hogar que se encuentre en la edad adulta, formulado con ingredientes de calidad que aseguran la correcta alimentación y nutrición de la mascota.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
@@ -376,6 +391,7 @@
                 <img src="../assets/img/comidas/gatos/8.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">GATI</h5>
+                    <p class="precio">S/. 10</p>
                     <hr>
                     <p class="card-text text-justify">Alimento 100% natural, sin cereales, completo y equilibrado con ingredientes de alta calidad. Producto ideal para mascotas de todas las razas y tamaños desde los 2 meses de edad.</p>
                     <form target="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
