--- a/Web/index.html
+++ b/Web/index.html
@@ -389,7 +389,7 @@
                     <div class="contact_text text-center">
                         <div class="section_title text-center">
                             <h3>¿Por qué escogernos?</h3>
-                            <p>Porque contamos con profesionales altamente capacitados, para brindar la mejor atención las 24 horas del día.</p>
+                            <p>Porque contamos con profesionales altamente capacitados, para brindar la mejor atención que tu mascota necesita.</p>
                         </div>
                         <div class="contact_btn d-flex align-items-center justify-content-center">
                             <a href="./ubicanos/" class="boxed-btn4" rel="nofollow" target="_blank">Ubícanos</a>
