--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -33,7 +33,7 @@
                             <div class="short_contact_list">
                                 <ul>
                                     <li><a href="tel:51944946824">+51 944 946 824</a></li>
-                                    <li><a>Atención las 24 horas</a></li>
+                                    <li><a>Atención de 08:00 a 20:00</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
         <!-- Generated from JS -->
     </div>
 
-    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
+    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header d-flex justify-content-center">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="modal-footer col-12 d-flex justify-content-center">
                     <button type="button" class="btn btn-primary col-5" id="btnEditarMascota">Editar Mascota</button>
-                    <button type="button" class="btn btn-danger col-5" data-bs-dismiss="modal">Cancelar Cambios</button>
+                    <button type="button" class="btn btn-danger col-5" id="btnCancelarCambios" data-bs-dismiss="modal">Cancelar Cambios</button>
                 </div>
             </div>
         </div>
