--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -120,11 +120,9 @@
 								<span class="text-dark" id="userName">Nombre Completo del Usuario</span>
 							</a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<!-- <a class="dropdown-item" id="opcPerfil2">
-									<i class="align-middle mr-1" data-feather="user"></i> Perfil
-								</a> -->
-								<!-- <div class="dropdown-divider"></div> -->
-								<a class="dropdown-item" id="btnSalir">Salir</a>
+								<a class="dropdown-item" href="../.">Volver a la web</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" id="btnSalir">Cerrar Sesión</a>
 							</div>
 						</li>
 					</ul>
