--- a/Web/vacunas/index.html
+++ b/Web/vacunas/index.html
@@ -37,7 +37,7 @@
                             <div class="short_contact_list">
                                 <ul>
                                     <li><a href="tel:51944946824">+51 944 946 824</a></li>
-                                    <li><a>Atención las 24 horas</a></li>
+                                    <li><a>Atención de 08:00 a 20:00</a></li>
                                 </ul>
                             </div>
                         </div>
