Validacion del DNI

--- a/Web/index.html
+++ b/Web/index.html
@@ -52,9 +52,7 @@
                                         <a>
                                             <img src="./assets/img/icons/usuario-anonimo.png" alt="usuario anónimo" id="userPhoto">
                                         </a>
-                                        <a href="./acceso/" rel="nofollow" target="_self" id="userName">
-                                            Portal de clientes
-                                        </a>
+                                        <a href="./acceso/" rel="nofollow" target="_self" id="userName">Acceder</a>
                                         <ul class="menu2" id="menu2">
                                             <li>
                                                 <a id="linkPerfil">Panel</a>
