--- a/Web/equipo/index.html
+++ b/Web/equipo/index.html
@@ -46,9 +46,7 @@
                                         <a>
                                             <img src="../assets/img/icons/usuario-anonimo.png" alt="usuario anónimo" id="userPhoto">
                                         </a>
-                                        <a href="../acceso/" rel="nofollow" target="_self" id="userName">
-                                            Portal de clientes
-                                        </a>
+                                        <a href="../acceso/" rel="nofollow" target="_self" id="userName">Acceder</a>
                                         <ul class="menu2" id="menu2">
                                             <li>
                                                 <a id="linkPerfil">Panel</a>
