--- a/Web/registrar-mascota/index.html
+++ b/Web/registrar-mascota/index.html
@@ -137,12 +137,12 @@
                                                         <input type="text" class="form-control" id="txtInputMascotaNombre" placeholder="Ingresar Nombre">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputMascotaPeso">Peso de la mascota</label>
-                                                        <input type="number" class="form-control mb-2" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="1" max="500" step="0.01">
+                                                        <label class="form-label" for="txtInputMascotaPeso">Peso de la mascota (kg)</label>
+                                                        <input type="number" class="form-control mb-2" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="0.1" max="100" step="0.01">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputMascotaTalla">Talla de la mascota</label>
-                                                        <input type="number" class="form-control mb-2" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="1" max="500" step="0.01">
+                                                        <label class="form-label" for="txtInputMascotaTalla">Talla de la mascota (cm)</label>
+                                                        <input type="number" class="form-control mb-2" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="0.1" max="200" step="0.01">
                                                     </div>
                                                     <div class="mb-3 col-12">
                                                         <label class="form-label" for="txtInputMascotaPresentacion">Presentación de la mascota</label>
